--- a/client/src/App.css
+++ b/client/src/App.css
@@ -443,3 +443,10 @@ table th {
         justify-content: center;
     }
 }
+
+/* .dropdown li {
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: red;
+} */
